Bug 56958 - REGRESSION(r77257): Only first page of a document is printed
Summary: REGRESSION(r77257): Only first page of a document is printed
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Printing (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC OS X 10.5
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks: 46422
  Show dependency treegraph
 
Reported: 2011-03-23 13:29 PDT by Dimitri Glazkov (Google)
Modified: 2011-03-25 12:19 PDT (History)
5 users (show)

See Also:


Attachments
Reduction (3.05 KB, text/html)
2011-03-23 13:29 PDT, Dimitri Glazkov (Google)
no flags Details
Patch that fixes the bug (1.23 KB, patch)
2011-03-24 19:02 PDT, Dave Hyatt
no flags Details | Formatted Diff | Diff
Patch (4.24 KB, patch)
2011-03-25 10:29 PDT, Dimitri Glazkov (Google)
adele: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dimitri Glazkov (Google) 2011-03-23 13:29:04 PDT
Created attachment 86678 [details]
Reduction

After http://trac.webkit.org/changeset/77257, the attached reduction no longer prints the entire page, just the first page. It appears that width/height on the P are the culprit. Removing them or making width less than ~600px makes the document print properly again. First seen in:

http://code.google.com/p/chromium/issues/detail?id=76694
Comment 1 Dave Hyatt 2011-03-24 19:02:47 PDT
Created attachment 86869 [details]
Patch that fixes the bug
Comment 2 Dave Hyatt 2011-03-24 19:03:31 PDT
Overflow needed to be cleared after the current document size was queried.  Simple mistake.  Needs a test case if one of the Chromium guys wants to finish this off.
Comment 3 Dimitri Glazkov (Google) 2011-03-24 19:08:05 PDT
(In reply to comment #2)
> Overflow needed to be cleared after the current document size was queried.  Simple mistake.  Needs a test case if one of the Chromium guys wants to finish this off.

!!!!!111!!! Thanks Dave.
Comment 4 Dimitri Glazkov (Google) 2011-03-25 10:29:04 PDT
Created attachment 86954 [details]
Patch
Comment 5 Dimitri Glazkov (Google) 2011-03-25 10:49:20 PDT
Committed r81970: <http://trac.webkit.org/changeset/81970>
Comment 6 Alexey Proskuryakov 2011-03-25 11:03:47 PDT
<rdar://problem/8994076>
Comment 7 WebKit Review Bot 2011-03-25 12:19:36 PDT
http://trac.webkit.org/changeset/81970 might have broken SnowLeopard Intel Release (WebKit2 Tests)
The following tests are not passing:
printing/page-count-layout-overflow.html