2011-03-25  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Adele Peterson.

        REGRESSION(r77257): Only first page of a document is printed
        https://bugs.webkit.org/show_bug.cgi?id=56958

        * printing/page-count-layout-overflow-expected.txt: Added.
        * printing/page-count-layout-overflow.html: Added.
2011-03-25  Dave Hyatt  <hyatt@apple.com>

        Reviewed by Adele Peterson.

        REGRESSION(r77257): Only first page of a document is printed
        https://bugs.webkit.org/show_bug.cgi?id=56958

        Test: printing/page-count-layout-overflow.html

        * page/FrameView.cpp:
        (WebCore::FrameView::forceLayoutForPagination): Moved clearing of overflow
            to the right place.

Canonical link: https://commits.webkit.org/71778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81970 268f45cc-cd09-0410-ab3c-d52691b4dbfc